@@ -37,14 +37,24 @@ module ElasticAPM
               destination: { name: subtype, resource: subtype, type: TYPE }
             )
 
-            ElasticAPM.with_span(
+            span = ElasticAPM.start_span(
               name,
               TYPE,
               subtype: subtype,
               action: ACTION,
-              context: context,
-              &block
+              context: context
             )
+            yield.tap do |result|
+              if name =~ /^(UPDATE|DELETE)/
+                if connection.respond_to?(:changes)
+                  span.context.db.rows_affected = connection.changes
+                elsif result.is_a?(Integer)
+                  span.context.db.rows_affected = result
+                end
+              end
+            end
+          ensure
+            ElasticAPM.end_span
           end
         end
       end
